# maris_vision

./: README.md
maris_pipe_pose_estimation/: CMakeLists.txt  package.xml
maris_pipe_pose_estimation/arm/: arm_points.txt
maris_pipe_pose_estimation/cfg/: PipePoseEstimationNodeParams.cfg  frame_tracker_params.cfg  intrinsic_correction.cfg  masked_stereo_proc_params.cfg
maris_pipe_pose_estimation/include/maris_pipe_pose_estimation/: AlphaBetaFilter.h  Blob.h  CVUtils.h  CylinderLSEstimator.h  EdgeAnglesDetector.h  FrameTracker.h  GradientOrientation.h  HUD.h  LineFitting.h  LineRansac.h  MarisPipeEdgeDetector.h  PipeEdgeTracker.h  PipePoseTracker.h  Profiler.h  StereoCapturer.h  Timer.h
maris_pipe_pose_estimation/launch/: only_tracker.launch  pipe_pose_estimation.launch  pipe_pose_estimation_dlr.launch  pipe_pose_estimation_fab.launch  pipe_pose_estimation_gopro.launch  pipe_pose_estimation_hp.launch  pipe_pose_estimation_lepanto.launch  pipe_pose_estimation_online.launch
maris_pipe_pose_estimation/launch/pipe_colors/: orange_albaro.launch  yellow_air.launch  yellow_albaro.launch
maris_pipe_pose_estimation/msg/: Line3D.msg
maris_pipe_pose_estimation/src/: ArmReprojectorNode.cpp  CylinderLSEstimator.cpp  FrameTracker.cpp  PipePoseEstimationNode.cpp  PipePoseTracker.cpp  Profiler.cpp  SingleImagePipePoseEstimationNode.cpp  fake_wTv_node.cpp  frame_tracker.cpp  pipe_tracker_node.cpp
maris_tf_pub/: CMakeLists.txt  package.xml
maris_tf_pub/include/: maris_tf_pub_core.h
maris_tf_pub/launch/: maris_tf_pub.launch
maris_tf_pub/src/: maris_tf_pub.cpp  maris_tf_pub_core.cpp
